tests/esproposal_class_instance_fields.ignore/esproposal_class_instance_fields.ignore.exp
Error ------------------------------------------------------------------------------------------------------ test.js:7:3

Computed property keys not supported. [unsupported-syntax]

   7|   [computed]: string;
        ^^^^^^^^^^^^^^^^^^^



Found 1 error
